# opennox

./: .clang-format  .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CODING.md  CONTRIBUTING.md  CONTRIBUTORS  Dockerfile_linux  Dockerfile_wasm  HACKING.md  Makefile  README.md  build-docker.sh  cxgo.yml  cxgo_h.yml  repackage.sh  vcpkg.txt
src/: .dockerignore  CMakeLists.txt  ConvertUTF.c  ConvertUTF.h  DG_dynarr.h  Dockerfile_go_win  GAME1.c  GAME1.h  GAME1_1.c  GAME1_1.h  GAME1_2.c  GAME1_2.h  GAME1_3.c  GAME1_3.h  GAME2.c  GAME2.h  GAME2_1.c  GAME2_1.h  GAME2_2.c  GAME2_2.h  GAME2_3.c  GAME2_3.h  GAME3.c  GAME3.h  GAME3_1.c  GAME3_1.h  GAME3_2.c  GAME3_2.h  GAME3_3.c  GAME3_3.h  GAME4.c  GAME4.h  GAME4_1.c  GAME4_1.h  GAME4_2.c  GAME4_2.h  GAME4_3.c  GAME4_3.h  GAME5.c  GAME5.h  (+722 more)
src/blobs/: blobs.go  cgo_fast.go  cgo_safe.go  memmap.c  memmap.h
src/client/: client.go  ctrlevent_codes.go  debug_sight.go  drawable.go  drawable_draw.go  drawable_ext.go  drawable_fx.go  drawable_monster.go  drawable_player.go  drawable_vector.go  images.go  misc.go  network.go  network_xfer.go  object_type.go  particles.go  rules.go  sight.go  states.go  viewport.go  wall.go
src/client/audio/: auddiag.c  auddiag.h  audevent.c  audevent.h  audio.go
src/client/draw/: animdraw.c  animdraw.h  armordraw.c  armordraw.h  arrowdraw.c  arrowdraw.h  basedraw.c  basedraw.h  boulderdraw.c  boulderdraw.h  bubbledraw.c  bubbledraw.h  canidraw.c  canidraw.h  debugdraw.c  debugdraw.h  doordraw.c  doordraw.h  draw.go  drawrays.c  drawrays.h  drawwin.c  drawwin.h  flagdraw.c  flagdraw.h  fx.c  fx.h  glowdraw.c  glowdraw.h  glyphdraw.c  glyphdraw.h  harpoondraw.c  harpoondraw.h  litning.c  litning.h  lvupdraw.c  lvupdraw.h  magicdrw.c  magicdrw.h  maidendraw.c  (+41 more)
src/client/drawable/: drawable.c  drawable.go  drawable.h  drawdb.c  drawdb.h
src/client/gui/: anim.go  chathelp.c  chathelp.h  chaticon.c  chaticon.h  conntype.c  conntype.h  cursor.go  defaults.go  dialog.go  events.go  gui.go  gui_ctf.c  gui_ctf.h  guibook.c  guibook.h  guibrief.c  guibrief.h  guicon.c  guicon.h  guicurs.c  guicurs.h  guidlg.c  guidlg.h  guifb.c  guifb.h  guigen.c  guigen.h  guiggovr.c  guiggovr.h  guiinput.c  guiinput.h  guiinv.c  guiinv.h  guijourn.c  guijourn.h  guimeter.c  guimeter.h  guimsg.c  guimsg.h  (+37 more)
src/client/input/: gamepad.go  handler.go  input.go  keyboard.go  misc.go  mouse.go  mouse_test.go  server.go  text.go  window.go
src/client/io/: console.c  console.h  io.go
src/client/light/: light.go  light16.c  light16.h
src/client/network/: cdecode.c  cdecode.h  deathmsg.c  deathmsg.h  inform.c  inform.h  netclint.c  netclint.h  network.go
src/client/noxfont/: bitmap.go  encoding.go  font.go  font_test.go
src/client/noxmovie/: noxmovie.go
src/client/noxrender/: color.go  fade.go  image.go  image_test.go  noxrender.go  noxrender_test.go  particles.go  particles_test.go  primitives.go  primitives_test.go  rules.go  sprites.go  text.go  viewport.go
src/client/render/: renderer.go
src/client/seat/: input.go  screen.go  seat.go
src/client/shell/: arnamain.c  arnamain.h  mainmenu.c  mainmenu.h  noxworld.c  noxworld.h  options.c  options.h  optsback.c  optsback.h  selchar.c  selchar.h  selclass.c  selclass.h  selcolor.c  selcolor.h  shell.go
src/client/system/: client.c  (+10 more)
src/common/: common.go  grid.go  noxfile.c  paths.go  poison.h  ports.go  random.c  random.h  strman.c  strman.h
src/comw32/: comlib.c  comlib.h  comw32.go
src/glegacy/: GAME_data_init.go  alloc_classes.go  audio_ail.go  audio_event.go  binfile.go  cgo_common.go  cgo_fast.go  cgo_flags.go  cgo_fs.go  cgo_local.go  cgo_safe.go  cgo_server.go  cgo_strings.go  client.go  client_draw.go  client_draw_all.go  client_gameloop.go  common.go  compat.go  config.go  config_legacy.go  cryptfile.go  ctrlevent.go  cxgo_GAME1.go  cxgo_GAME1_1.go  cxgo_GAME1_2.go  cxgo_GAME1_3.go  cxgo_GAME2.go  cxgo_GAME2_1.go  cxgo_GAME2_2.go  cxgo_GAME2_3.go  cxgo_GAME3.go  cxgo_GAME3_1.go  cxgo_GAME3_2.go  cxgo_GAME3_3.go  cxgo_GAME4.go  cxgo_GAME4_1.go  cxgo_GAME4_2.go  cxgo_GAME4_3.go  cxgo_GAME5.go  (+237 more)
src/internal/: LICENSE
src/legacy/: GAME1.c  GAME1.h  GAME1_1.c  GAME1_1.h  GAME1_2.c  GAME1_2.h  GAME1_3.c  GAME1_3.h  GAME2.c  GAME2.h  GAME2_1.c  GAME2_1.h  GAME2_2.c  GAME2_2.h  GAME2_3.c  GAME2_3.h  GAME3.c  GAME3.h  GAME3_1.c  GAME3_1.h  GAME3_2.c  GAME3_2.h  GAME3_3.c  GAME3_3.h  GAME4.c  GAME4.h  GAME4_1.c  GAME4_1.h  GAME4_2.c  GAME4_2.h  GAME4_3.c  GAME4_3.h  GAME5.c  GAME5.h  GAME5_2.c  GAME5_2.h  GAME_data_init.go  GameEx.c  GameEx.h  alloc_classes.go  (+521 more)
src/main/: GAME_data.c  GAME_data_init.c  GAME_data_init.h  main.c  main.cpp
src/netxfer/: netxfer.go  receive.go  send.go
src/rtc-server/: package.json  server.js
src/server/: activators.go  audio_event.go  colors.go  crc.go  gamedata.go  groups.go  hooks.go  http.go  map.go  map_debug.go  maps_send.go  math.go  misc.go  modifiers.go  nat.go  network.go  network_xfer.go  object.go  object_ai.go  object_ai_actions.go  object_ai_path.go  object_ankh.go  object_armor.go  object_dialog.go  object_door.go  object_elevator.go  object_glyph.go  object_item.go  object_missile.go  object_monster.go  object_monster_gen.go  object_mover.go  object_npc.go  object_obelisk.go  object_player.go  object_reward.go  object_shop.go  object_spell.go  object_type.go  object_use.go  (+40 more)
src/tainted/: ConvertUTF.h  GAME1.c  GAME1_1.c  GAME1_2.c  GAME1_2.h  GAME1_3.c  GAME2.h  GAME2_1.c  GAME2_1.h  GAME2_2.c  GAME2_3.c  GAME3.c  GAME3.h  GAME3_1.c  GAME3_2.c  GAME3_3.c  GAME4.c  GAME4.h  GAME4_1.h  GAME4_2.c  GAME4_3.c  GAME5_2.c  GAME_data.h  GAME_data_init.c  GAME_data_init.h  GameEx.c  alloc_classes.go  api_flags.go  api_memmap.go  audio_null.go  audio_openal.c  audio_openal.go  cdrom.h  cgo_arrays.go  cgo_common.go  cgo_fast.go  cgo_flags.go  cgo_fs.c  cgo_fs.go  cgo_net.go  (+264 more)
src/vqa/: CommonHeader.h  aud_decode.cpp  aud_decode.h  bitmap_image.hpp  ddpf_conversion.cpp  ddpf_conversion.h  vqa_decode.cpp  vqa_decode.h  vqa_file.cpp  vqa_file.h  vqa_public.cpp
src/ws-server/: package.json  server.js
(+567 files in other folders)
